--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,5 @@ djangorestframework==3.16.0
 djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.3.1
 python-dotenv==1.0.0
-Pillow>=10.0.0
+Pillow==11.0.0
+mysqlclient==2.2.4
