--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.3.1
 python-dotenv==1.0.0
 Pillow==11.0.0
+setuptools==75.1.0
+PyMySQL==1.1.0
