--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,17 @@ PyJWT==2.10.1
 python-dotenv==1.0.0
 setuptools==80.9.0
 sqlparse==0.5.3
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.4
+django-allauth==65.9.0
+django-crispy-forms==2.4
+django-widget-tweaks==1.5.0
+idna==3.10
+pycparser==2.22
+python-decouple==3.8
+requests==2.32.4
+sqlparse==0.5.3
+urllib3==2.4.0
+
